Fixes breadcrumb spacing

--- a/app/assets/stylesheets/modules/_general.scss
+++ b/app/assets/stylesheets/modules/_general.scss
@@ -9,6 +9,7 @@
 
 @media only screen and (min-width:768px) {
   main { padding-top: rem-calc(70); }
+  body.logged-in main { padding-top: rem-calc(102); }
 }
 
 @media only screen and (min-width:1024px) {}
